# notebook-cli

./: .gitignore  CONTEXT.md  LICENSE  README.md  install.sh  notebook  pyproject.toml
src/notebook_cli/: __init__.py  cli.py
