[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notebook-cli"
version = "0.1.3"
description = "Turn any project into a NotebookLM-backed knowledge base — bundle, upload, diff, and wire into Claude Code."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "apoorva-01" }]
keywords = ["notebooklm", "claude", "claude-code", "agents", "knowledge-base", "rag"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
]
# Bundle the underlying NotebookLM client + Playwright so the user gets
# everything from a single `pipx install`.
dependencies = [
  "notebooklm-py>=0.3.4",
  "playwright>=1.40",
]

[project.urls]
Homepage = "https://github.com/apoorva-01/notebook-cli"
Source = "https://github.com/apoorva-01/notebook-cli"
Issues = "https://github.com/apoorva-01/notebook-cli/issues"

[project.scripts]
notebook = "notebook_cli.cli:_entry"

[tool.hatch.build.targets.wheel]
packages = ["src/notebook_cli"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "LICENSE"]
